# app_creativas

./: .babelrc  .env  Cargo.toml  README.md  canister_ids.json  dfx.json  estructura_proyecto.txt  index.html  package-lock.json  package.json  styles.css  tailwind.config.js  vite.config.js
backend/eccomerce/: Cargo.toml  eccomerce.did
backend/eccomerce/src/: # Item Marketplace.md  lib.rs
backend/messages/: Cargo.toml  messages.did
backend/nft_venture/: Cargo.toml  nft_venture.did
contracts/: Crypay.sol
frontend/: App.jsx  FirebaseConfig.jsx  main.jsx
frontend/assets/: web3logo.avif
frontend/components/: AuthContext.jsx  Body.jsx  Card.jsx  CompletePayment.jsx  CompletePaymentCard.jsx  CreatePay.jsx  CreateProfile.jsx  Get.jsx  GetStatus.jsx  Home.jsx  Item.jsx  LoggetOut.jsx  Login.jsx  Modal.jsx  Pay.jsx  PayCard.jsx  PaymentDetails.jsx  PaymentsDetailsCard.jsx  Providers.jsx  Shop.jsx  WalletConnect.jsx  WalletContext.jsx  checkout.jsx  useProfileActivity.jsx  withAuthentication.jsx
frontend/components_NFT/: CreateToken.jsx  Gettokens.jsx  Marketplace.jsx  YourInvest.jsx  Your_Tokens.jsx  Your_invests.jsx  balance.jsx  hash.js  showFracNFT.jsx
frontend/ecommerce/: Card.jsx  CartContext.jsx  Checkout.jsx  Inbox.jsx  Item.jsx  Navbar.jsx  PaymentsDetailsCard.jsx  Profile.jsx  Shop.jsx  Sidebar.jsx
frontend/landing/: Card.jsx  Footer.jsx  Mediun.jsx
frontend/styles/: styles.css
internet-identity/: internet_identity_dev.wasm
ipfs/: hola2.pgn  nada.js  server.js
utils/: constans.js  hello.js
utils/abi/: CardCrypay.json  Crypay.json  RES4.json  (+4 more)
(+16 files in other folders)
